make-a-wish-salesforce/src/objects/VisualAntidote__Document__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__AttachToObject__c</fullName>
        <description>Object Index</description>
        <label>AttachToObject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Document_Id__c</fullName>
        <label>Document Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Document_Key__c</fullName>
        <label>Document Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Field_Mappings__c</fullName>
        <label>Field Mappings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
        <relationshipLabel>Formstack Documents</relationshipLabel>
        <relationshipName>Formstack_Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Platform_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Platform Account</label>
        <referenceTo>VisualAntidote__Platform_Account__c</referenceTo>
        <relationshipLabel>Formstack Documents</relationshipLabel>
        <relationshipName>Formstack_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__UploadToSF__c</fullName>
        <description>Attachment/File/Chatter</description>
        <label>UploadToSF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Formstack Document</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formstack Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>